# serializer version: 1
# name: test_basic_data_version_override
  list([
    dict({
      'field_data_version': dict({
        'computed': '11963107',
      }),
      'field_provenance': dict({
        'computed': '11963107',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'computed': '84358921',
      }),
      'field_provenance': dict({
        'computed': '84358921',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_data_version_cleanup_in_result
  list([
    dict({
      'field_data_version': dict({
        'computed': '10525834',
      }),
      'field_provenance': dict({
        'computed': '10525834',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'computed': '12548250',
      }),
      'field_provenance': dict({
        'computed': '12548250',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_data_version_propagation_with_renames
  list([
    dict({
      'field_data_version': dict({
        'computed': '13446334',
      }),
      'field_provenance': dict({
        'computed': '13446334',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'computed': '92559652',
      }),
      'field_provenance': dict({
        'computed': '92559652',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_default_behavior_no_override
  list([
    dict({
      'field_data_version': dict({
        'computed': '10882851',
      }),
      'field_provenance': dict({
        'computed': '10882851',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'computed': '43952504',
      }),
      'field_provenance': dict({
        'computed': '43952504',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_multiple_upstreams_with_overrides
  list([
    dict({
      'field_data_version': dict({
        'fusion': '10125484',
      }),
      'field_provenance': dict({
        'fusion': '10125484',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'fusion': '12914839',
      }),
      'field_provenance': dict({
        'fusion': '12914839',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_propagation_chain_with_data_version
  dict({
    'feature_b': list([
      dict({
        'field_data_version': dict({
          'field_b': '61367123',
        }),
        'field_provenance': dict({
          'field_b': '61367123',
        }),
        'sample_uid': 1,
      }),
      dict({
        'field_data_version': dict({
          'field_b': '61367123',
        }),
        'field_provenance': dict({
          'field_b': '61367123',
        }),
        'sample_uid': 2,
      }),
    ]),
    'feature_c': list([
      dict({
        'field_data_version': dict({
          'field_c': '58014407',
        }),
        'field_provenance': dict({
          'field_c': '58014407',
        }),
        'sample_uid': 1,
      }),
      dict({
        'field_data_version': dict({
          'field_c': '58014407',
        }),
        'field_provenance': dict({
          'field_c': '58014407',
        }),
        'sample_uid': 2,
      }),
    ]),
  })
# ---
# name: test_selective_field_override
  list([
    dict({
      'field_data_version': dict({
        'uses_field1': '52109698',
        'uses_field2': '22957184',
      }),
      'field_provenance': dict({
        'uses_field1': '52109698',
        'uses_field2': '22957184',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'uses_field1': '52109698',
        'uses_field2': '62736246',
      }),
      'field_provenance': dict({
        'uses_field1': '52109698',
        'uses_field2': '62736246',
      }),
      'sample_uid': 2,
    }),
  ])
# ---
